--- a/Exercicios/ex022/fundo06.html
+++ b/Exercicios/ex022/fundo06.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Imagem de Fundo</title>
+    <style>
+        body {
+            height: 100vh;
+            background-color: black;
+            background-image: url(imagens/wallpaper002.jpg);
+            background-position: center top;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        
+        main {
+            background-color: white;
+            width: 400px;
+            padding: 10px;
+            margin: auto;
+            border: 2px solid darkgray;
+            border-radius: 15px;
+        }
+    </style>
 </head>
 <body>
-    
+    <main>
+        <h1>Teste de Imagem de Fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium adipisci hic, quisquam praesentium, animi blanditiis dicta placeat aperiam doloremque unde odit vitae sint quasi suscipit beatae aliquam, nesciunt consequuntur Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quisquam explicabo culpa distinctio officiis repellat cupiditate delectus dolore aliquam illo facere vitae tempore iure, repudiandae alias necessitatibus possimus impedit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis minus perferendis possimus illum similique delectus quisquam quidem eveniet soluta consequatur fugiat expedita harum error, ullam, quod magni doloremque cupiditate dolor.</p>
+    </main>
 </body>
 </html>
