--- a/Projetos/mini-cordel/index.html
+++ b/Projetos/mini-cordel/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini Cordel</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="imagens/book-open-line.png">
 </head>
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743]">Milton Duarte</a></p>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743]" target="_blank">Milton Duarte</a></p>
     </header>
     <section>
         <p>Estou ficando cansado <br>
@@ -75,7 +76,7 @@
             Deixe que Deus interprete.</p>
     </section>
     <footer>
-        <p>Site criado por <a href="#">Henrique Vilar</a> para o <a href="#">Github</a></p>
+        <p>Site criado por <a href="https://www.instagram.com/henrivilar/" target="_blank">Henrique Vilar</a> para o <a href="https://github.com/henrivilar" target="_blank">Github</a></p>
     </footer>
 </body>
 </html>
