--- a/Exercicios/ex023/tabela02.html
+++ b/Exercicios/ex023/tabela02.html
@@ -21,6 +21,12 @@
             border: 1px solid black;
         }
 
+        thead tr th {
+            position: sticky;
+            top: -1px;
+            background-color: darkgrey;
+        }    
+            
         td, th {
             border: 1px solid black;
         }
