--- a/Projetos/mini-iphone/index.html
+++ b/Projetos/mini-iphone/index.html
@@ -13,7 +13,7 @@
             <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt=""><br></a>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt=""><br></a>
             <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""><br></a>
             <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt=""><br></a>
             <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""><br></a>
