--- a/Projetos/mini-iphone/index.html
+++ b/Projetos/mini-iphone/index.html
@@ -14,11 +14,11 @@
         </section>
         <section id="redes-sociais">
             <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt=""><br></a>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""><br></a>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt=""><br></a>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""><br></a>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt=""><br></a>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt=""><br></a>
+            <a href="gihub.html" target="tela"><img src="imagens/logo-github.jpg" alt=""><br></a>
+            <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt=""><br></a>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt=""><br></a>
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt=""><br></a>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt=""><br></a>
         </section>
     </main>
 </body>
