--- a/Exercicios/ex026/mq04/index.html
+++ b/Exercicios/ex026/mq04/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estilo/style.css" media="all">
+    <link rel="stylesheet" href="estilo/mediaquery.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Testando Media Queries</h1>
+        <img id="phone" src="imgs/icon-phone.png" alt="Acessando via smartphone">
+        <img id="tablet" src="imgs/icon-tablet.png" alt="Acessando via tablet">
+        <img id="print" src="imgs/icon-print.png" alt="Versão para impressão">
+        <img id="pc" src="imgs/icon-pc.png" alt="Versão para descktop">
+        <img id="tv" src="imgs/icon-tv.png" alt="Versão para TV">
+    </main>
 </body>
 </html>
