--- a/Projetos/projeto-login/index.html
+++ b/Projetos/projeto-login/index.html
@@ -16,18 +16,20 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente.Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-                <form action="" method="post">
-                    <p id="email">
-                        <span class="material-symbols-outlined">person</span>
-                        <input type="email" name="email" id="iemail" placeholder="Seu email" required>
-                    </p>
-                    <p id="password">
-                        <span class="material-symbols-outlined">lock</span>
-                        <input type="password" name="senha" id="isenha" placeholder="Sua senha" minlength="8" maxlength="20" required>
-                    </p>
+                <form action="" method="post" autocomplete="on">
+                    <div class="campos">
+                        <p id="email">
+                            <span id="icons" class="material-symbols-outlined">person</span>
+                            <input type="email" name="email" id="iemail" placeholder="Seu email" required autocomplete="email">
+                        </p>
+                        <p id="password">
+                            <span id="icons"class="material-symbols-outlined">lock</span>
+                            <input type="password" name="senha" id="isenha" placeholder="Sua senha" minlength="8" maxlength="20" required autocomplete="current-password">
+                        </p>
+                    </div>
                     <p id="bottons">
                         <input type="submit" value="Entrar">
-                        <input type="submit" value="Esqueci a senha">
+                        <input id="forgot" type="submit" value="Esqueci a senha">
                     </p>
                 </form>
             </div>
